<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="account_type">Account Type</string>
    <string name="action_settings">Settings</string>
    <string name="add_bt">Open Torrent</string>
    <string name="add_download">Add download</string>
    <string name="all_files">All Files</string>
    <string name="all_images">All Images</string>
    <string name="all_photos">All Photos</string>
    <string name="all_video">All Video</string>
    <string name="all_videos">All Videos</string>
    <string name="app_name">Magnet Torrent Player</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attachments_num" >%d</string>
    <string name="attachments_title_text" formatted="false">(%d/%d)</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="brightness">brightness</string>
    <string name="cache">Buffering</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_open_file">Cannot open this file</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="completed">Completed</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete_all_history">Are you sure you want to empty the play history?</string>
    <string name="confirm_delete_this_history">Are you sure you want to delete the play history?</string>
    <string name="cut_text">Cut</string>
    <string name="default_web_client_id">1024470198157-d71l3t92dmt412rr261sh9tmf5degr9r.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="delete_history_all">Clear All</string>
    <string name="deleted">Deleted</string>
    <string name="done">Done</string>
    <string name="download">Download</string>
    <string name="download_address">Please enter the download address</string>
    <string name="download_document">Directory:TorrentPlayer</string>
    <string name="download_fail">Download Fail</string>
    <string name="download_file_choose">Select the storage subfile</string>
    <string name="download_manager">Download Manager</string>
    <string name="download_start">Start download</string>
    <string name="download_text">Please select the download location</string>
    <string name="downloaded">Download completed</string>
    <string name="downloading">Downloading</string>
    <string name="edit_delete_all">Delete all</string>
    <string name="edt_url_hint">Enter http,magnet,rtmp,m3u8</string>
    <string name="empty">Empty</string>
    <string name="empty_folder">This is an empty folder</string>
    <string name="error">error</string>
    <string name="error_download">error</string>
    <string name="excel_title">XLS</string>
    <string name="expiry_date">Expiry date</string>
    <string name="file_delete">Delete</string>
    <string name="file_delete_confirm">Are you sure you want to delete this file?</string>
    <string name="file_delete_failed">Failed to delete</string>
    <string name="file_delete_success">Deleted</string>
    <string name="file_list">File List</string>
    <string name="file_no_exist">File does not exist</string>
    <string name="file_not_find">File does not exist</string>
    <string name="file_rename">Rename</string>
    <string name="file_rename_exists">The file already exists</string>
    <string name="file_rename_failed">Rename failed</string>
    <string name="fill">Fill</string>
    <string name="finished">Download Completed</string>
    <string name="firebase_database_url">https://magnettorrentplayer.firebaseio.com</string>
    <string name="folder">Folder</string>
    <string name="gcm_defaultSenderId">1024470198157</string>
    <string name="go_download">Go Download</string>
    <string name="goback">Back</string>
    <string name="google_api_key">AIzaSyCpbs4M8xIJU9IQ9oO0BzdjnLsM3MEfQHI</string>
    <string name="google_app_id">1:1024470198157:android:b37bec7007c455e7</string>
    <string name="google_crash_reporting_api_key">AIzaSyCpbs4M8xIJU9IQ9oO0BzdjnLsM3MEfQHI</string>
    <string name="google_storage_bucket">magnettorrentplayer.appspot.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_text">help</string>
    <string name="images">Images</string>
    <string name="incorrect">The address you entered is incorrect</string>
    <string name="load_fail">fail to load</string>
    <string name="loading">loading</string>
    <string name="local">Local</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="need_per">The player needs to read and write local permissions</string>
    <string name="net_fail">fail to load</string>
    <string name="new_version">New Version:</string>
    <string name="no_camera_exists">No Application exists for camera!</string>
    <string name="no_download">There is currently no download</string>
    <string name="no_file">File does not exist</string>
    <string name="no_files_found">No Files Found</string>
    <string name="no_local_video">No Video</string>
    <string name="no_player_rec">There are no playable files</string>
    <string name="no_sd">No SD,Download Fail</string>
    <string name="no_subscription">No subscription</string>
    <string name="no_web">The Web is Disconnected</string>
    <string name="normal">Normal</string>
    <string name="not_opened">The file can not be opened</string>
    <string name="open_file">Open the file</string>
    <string name="parse_failed">Parsing failed</string>
    <string name="parsing">Parsing</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pay_error">Payment maintenance</string>
    <string name="pdf_title">PDF</string>
    <string name="permission_filepicker_rationale">Storage permission is needed to access files.</string>
    <string name="permission_text">Read and write local permissions for required permissions,Without this permission,this application may not work properly. Opens the application settings screen to modify application permissions</string>
    <string name="permission_title">Required permission</string>
    <string name="phone_storage">Phone storage</string>
    <string name="play">Play</string>
    <string name="play_abnormal">Google Play Services is abnormal</string>
    <string name="play_error">ERROR</string>
    <string name="play_record">History</string>
    <string name="ppt_title">PPT</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="rate_app">Rate app</string>
    <string name="website">Website</string>
</resources>